--- a/src/components/GalleryView.module.css
+++ b/src/components/GalleryView.module.css
@@ -58,3 +58,19 @@
   font-weight: bold;
   background-color: #f9f9f9;
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.backButton {
+  text-decoration: none;
+  background-color: #58a6ea;
+  color: white;
+  padding: 8px 15px;
+  border-radius: 5px;
+  font-weight: bold;
+}
